adding new content on artikel_sejarah.html

--- a/css/artikel_sejarah.css
+++ b/css/artikel_sejarah.css
@@ -74,7 +74,7 @@ a{
 
 /*Jumbotron*/
 .jumbotron-1{
-    background-image: url(../pict/fatahillah.jpg);
+    background-image: url(../pict/fatahillah_sore.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 900px;
