--- a/css/rute.css
+++ b/css/rute.css
@@ -73,7 +73,7 @@ a{
 
 /*Jumbotron*/
 .jumbotron-1{
-    background-image: url(../pict/fatahillah.jpg);
+    background-image: url(../pict/jalan_jakarta.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 900px;
