--- a/css/sejarah.css
+++ b/css/sejarah.css
@@ -2,7 +2,7 @@ body {
     font-family: 'EB Garamond', serif;
     margin: 0;
     padding: 0;
-    background-color: #FDDA7F;
+    background-color: rgb(255, 255, 255);
 }
 
 /*navbar*/
@@ -23,7 +23,7 @@ body {
 }
 
 .navbar-background-1{
-	background-color: #FDDA7F;
+	background-color: white;
 }
 
 .logo {
@@ -87,7 +87,7 @@ a{
 	margin-top: 100px;
 	margin-left: 50px;
 	margin-right: 50px;
-	margin-bottom: 50px;
+	margin-bottom: 100px;
 	text-align: center;
 }
 
