--- a/css/wisata.css
+++ b/css/wisata.css
@@ -2,7 +2,7 @@ body {
     font-family: 'EB Garamond', serif;
     margin: 0;
     padding: 0;
-    background-color: #FDDA7F;
+    background-color: rgb(255, 255, 255);
 }
 
 /*navbar*/
@@ -23,7 +23,7 @@ body {
 }
 
 .navbar-background-1{
-	background-color: #FDDA7F;
+	background-color: white;
 }
 
 .logo {
