--- a/css/kuliner.css
+++ b/css/kuliner.css
@@ -75,7 +75,7 @@ a{
 
 /*Jumbotron*/
 .jumbotron-1{
-    background-image: url(../pict/fatahillah.jpg);
+    background-image: url(../pict/streetfood.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 900px;
