--- a/css/artikel_kuliner.css
+++ b/css/artikel_kuliner.css
@@ -75,7 +75,7 @@ a{
 
 /*Jumbotron*/
 .jumbotron-1{
-    background-image: url(../pict/kerak_telor.jpg);
+    background-image: url(../pict/keraktelor.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 900px;
@@ -156,6 +156,11 @@ a{
 	float: left;
 	margin-right: 10px;
 	border-radius: 10px;
+}
+
+.card-nama h4{
+	font-size: 16px;
+	font-weight: bold;
 }
 
 .card-nama p{
